--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
     "type": "git",
     "url": "git://github.com/int128/new-tab-bookmarks.git"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "bower": "^1.3.5",
     "gulp": "^3.8.5",
+    "gulp-coffee": "^2.0.1",
     "gulp-csso": "^0.2.9",
     "gulp-rimraf": "^0.1.0",
     "gulp-uglify": "^0.3.1"
