--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {},
   "devDependencies": {
     "bower": "^1.3.5",
+    "coffee-script": "^1.7.1",
     "gulp": "^3.8.5",
     "gulp-coffee": "^2.0.1",
     "gulp-csso": "^0.2.9",
