--- a/manifest.json
+++ b/manifest.json
@@ -5,6 +5,7 @@
     "permissions": [
         "bookmarks",
         "chrome://favicon/",
+        "topSites",
         "tabs"
     ],
     "chrome_url_overrides": {
