--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gulp-less": "^1.2.4",
     "gulp-ngmin": "^0.3.0",
     "gulp-rimraf": "^0.1.0",
-    "gulp-uglify": "^0.3.1"
+    "gulp-uglify": "^0.3.1",
+    "gulp-zip": "^0.4.0"
   }
 }
