--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
   "devDependencies": {
     "bower": "^1.3.5",
     "coffee-script": "^1.7.1",
+    "del": "^0.1.1",
     "gulp": "^3.8.5",
     "gulp-coffee": "^2.0.1",
     "gulp-csso": "^0.2.9",
     "gulp-less": "^1.2.4",
     "gulp-ngmin": "^0.3.0",
-    "gulp-rimraf": "^0.1.0",
     "gulp-uglify": "^0.3.1",
     "gulp-zip": "^0.4.0"
   }
