--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
     "type": "git",
     "url": "git://github.com/int128/new-tab-bookmarks.git"
   },
-  "dependencies": {},
   "devDependencies": {
     "bower": "^1.3.5",
     "coffee-script": "^1.7.1",
@@ -14,7 +13,7 @@
     "gulp-coffee": "^2.0.1",
     "gulp-csso": "^0.2.9",
     "gulp-less": "^1.2.4",
-    "gulp-ngmin": "^0.3.0",
+    "gulp-ng-annotate": "^0.2.0",
     "gulp-uglify": "^0.3.1",
     "gulp-zip": "^0.4.0"
   }
