--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
     "url": "git://github.com/int128/new-tab-bookmarks.git"
   },
   "devDependencies": {
-    "coffee-script": "^1.7.1",
-    "del": "^0.1.1",
-    "gulp": "^3.8.5",
-    "gulp-coffee": "^2.0.1",
-    "gulp-csso": "^0.2.9",
-    "gulp-less": "^1.2.4",
-    "gulp-uglify": "^0.3.1",
-    "gulp-zip": "^0.4.0"
+    "coffee-script": "^1.9.2",
+    "del": "^1.1.1",
+    "gulp": "^3.8.11",
+    "gulp-less": "^3.0.2",
+    "gulp-webpack": "^1.3.2",
+    "gulp-zip": "^3.0.2",
+    "jsx-loader": "^0.13.1",
+    "webpack": "^1.8.5"
+  },
+  "dependencies": {
+    "react": "^0.13.1"
   }
 }
