--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Bookmarks in New Tab Page",
-  "version": "1.1.1",
-  "description": "Replaces the new tab page with tiled bookmarks",
+  "version": "1.2.0",
+  "description": "Light weight new-tab-page with tiled bookmarks",
   "permissions": [
     "bookmarks",
     "chrome://favicon/",
