--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gulp-less": "^3.0.2",
     "gulp-webpack": "^1.3.2",
     "gulp-zip": "^3.0.2",
+    "json-loader": "^0.5.1",
     "jsx-loader": "^0.13.1",
     "webpack": "^1.8.5"
   },
