--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "coffee-script": "^1.9.2",
     "del": "^1.1.1",
     "gulp": "^3.8.11",
+    "gulp-add-src": "^0.2.0",
+    "gulp-concat": "^2.5.2",
     "gulp-less": "^3.0.2",
     "gulp-webpack": "^1.3.2",
     "gulp-zip": "^3.0.2",
