--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gulp": "^3.9.0",
     "gulp-add-src": "^0.2.0",
     "gulp-concat": "^2.6.0",
+    "gulp-filter": "^3.0.1",
     "gulp-less": "^3.0.5",
     "gulp-webpack": "^1.5.0",
     "gulp-zip": "^3.0.2",
