--- a/package.json
+++ b/package.json
@@ -8,16 +8,16 @@
   },
   "devDependencies": {
     "coffee-script": "^1.10.0",
+    "css-loader": "^0.23.0",
     "del": "^1.2.1",
     "gulp": "^3.9.0",
     "gulp-add-src": "^0.2.0",
-    "gulp-concat": "^2.6.0",
-    "gulp-filter": "^3.0.1",
-    "gulp-less": "^3.0.5",
     "gulp-webpack": "^1.5.0",
     "gulp-zip": "^3.0.2",
     "json-loader": "^0.5.4",
     "jsx-loader": "^0.13.2",
+    "less-loader": "^2.2.2",
+    "style-loader": "^0.13.0",
     "webpack": "^1.12.9"
   },
   "dependencies": {
