--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "url": "https://github.com/int128/new-tab-bookmarks.git"
   },
   "devDependencies": {
+    "babel-core": "^6.3.21",
+    "babel-loader": "^6.2.0",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
     "coffee-script": "^1.10.0",
     "css-loader": "^0.23.0",
     "del": "^1.2.1",
@@ -15,7 +19,6 @@
     "gulp-webpack": "^1.5.0",
     "gulp-zip": "^3.0.2",
     "json-loader": "^0.5.4",
-    "jsx-loader": "^0.13.2",
     "less-loader": "^2.2.2",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.9"
