--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "css-loader": "^0.23.0",
     "del": "^1.2.1",
     "gulp": "^3.9.0",
+    "gulp-uglify": "^1.5.1",
     "gulp-webpack": "^1.5.0",
     "gulp-zip": "^3.0.2",
     "json-loader": "^0.5.4",
