--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp-zip": "^3.0.2",
     "json-loader": "^0.5.4",
     "less-loader": "^2.2.2",
+    "run-sequence": "^1.1.5",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.9"
   },
