--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "del": "^1.2.1",
     "gulp": "^3.9.0",
     "gulp-uglify": "^1.5.1",
-    "gulp-webpack": "^1.5.0",
     "gulp-zip": "^3.0.2",
     "json-loader": "^0.5.4",
+    "less": "^2.5.3",
     "less-loader": "^2.2.2",
     "run-sequence": "^1.1.5",
     "style-loader": "^0.13.0",
-    "webpack": "^1.12.9"
+    "webpack": "^1.12.9",
+    "webpack-stream": "^3.1.0"
   },
   "dependencies": {
     "react": "^0.14.3"
