--- a/package.json
+++ b/package.json
@@ -7,24 +7,25 @@
     "url": "https://github.com/int128/new-tab-bookmarks.git"
   },
   "devDependencies": {
-    "babel-core": "^6.3.21",
-    "babel-loader": "^6.2.0",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
-    "css-loader": "^0.23.0",
-    "del": "^1.2.1",
-    "gulp": "^3.9.0",
-    "gulp-uglify": "^1.5.1",
-    "gulp-zip": "^3.0.2",
+    "babel-core": "^6.10.4",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.11.1",
+    "copy-webpack-plugin": "^3.0.1",
+    "css-loader": "^0.23.1",
     "json-loader": "^0.5.4",
-    "less": "^2.5.3",
-    "less-loader": "^2.2.2",
-    "run-sequence": "^1.1.5",
-    "style-loader": "^0.13.0",
-    "webpack": "^1.12.9",
-    "webpack-stream": "^3.1.0"
+    "less": "^2.7.1",
+    "less-loader": "^2.2.3",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.13.1"
   },
   "dependencies": {
-    "react": "^0.14.3"
+    "react": "^0.14.8"
+  },
+  "scripts": {
+    "start": "webpack -d --watch",
+    "build": "webpack -p",
+    "zip":   "zip -j - build/extension/* > build/extension.zip",
+    "clean": "rm -fr build"
   }
 }
