--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "new-tab-bookmarks",
   "version": "0.1.0",
   "private": true,
+  "description": "an extension to add the tab with bookmarks",
+  "license": "Apache-2.0",
   "devDependencies": {
     "react-scripts": "0.9.0"
   },
@@ -10,9 +12,10 @@
     "react-dom": "^15.4.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node scripts/start.js",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "zip":   "zip -j - build/* > build/extension.zip",
+    "clean": "rm -fr build"
   }
 }
