--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-scripts": "0.9.0"
   },
   "dependencies": {
+    "immutable": "^3.8.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
