--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.5",
     "redux": "^3.6.0",
-    "redux-logger": "^2.10.2",
-    "redux-thunk": "^2.2.0"
+    "redux-logger": "^2.10.2"
   },
   "scripts": {
     "start": "node scripts/start.js",
