--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-scripts": "1.0.5"
   },
   "dependencies": {
+    "chrome-promise": "^2.0.3",
     "immutable": "^3.8.1",
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
@@ -16,7 +17,8 @@
     "react-modal": "^1.7.12",
     "react-redux": "^5.0.5",
     "redux": "^3.6.0",
-    "redux-logger": "^2.10.2"
+    "redux-logger": "^2.10.2",
+    "redux-saga": "^0.15.3"
   },
   "scripts": {
     "start": "node scripts/start.js",
