--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "BNTP: Bookmarks in New Tab Page",
-  "version": "2.4.2",
+  "version": "SNAPSHOT",
   "description": "Lightweight New Tab Page with Bookmarks and Top Sites",
   "permissions": [
     "bookmarks",
