--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "archiver": "^1.3.0",
+    "mock-local-storage": "^1.0.2",
     "react-scripts": "1.0.5"
   },
   "dependencies": {
