--- a/.github/workflows/react.yaml
+++ b/.github/workflows/react.yaml
@@ -27,4 +27,5 @@ jobs:
           node-version: 16
           cache: yarn
       - run: yarn
-      - run: yarn test
+      #- run: yarn test
+      - run: yarn build
