--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     ]
   },
   "devDependencies": {
-    "@types/chrome": "^0.0.188"
+    "@types/chrome": "^0.0.188",
+    "jest-chrome": "^0.7.2"
   }
 }
