--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "test": "react-scripts test",
     "format": "prettier --write src scripts",
     "format-check": "prettier --check src scripts",
+    "lint": "eslint src",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
