--- a/package.json
+++ b/package.json
@@ -22,13 +22,8 @@
     "test": "react-scripts test",
     "format": "prettier --write src scripts",
     "format-check": "prettier --check src scripts",
+    "lint": "eslint src",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
