Migrate to manifest v3

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -12,12 +12,12 @@
   "chrome_url_overrides": {
     "newtab": "index.html"
   },
-  "browser_action": {
+  "action": {
     "default_popup": "index.html#popup"
   },
   "icons": {
     "48": "small_tiles.png",
     "128": "small_tiles_128.png"
   },
-  "manifest_version": 2
+  "manifest_version": 3
 }
