--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "@types/chrome": "^0.0.188",
+    "cypress": "^10.1.0",
     "jest-chrome": "^0.7.2",
     "prettier": "^2.6.2"
   }
