--- a/.github/workflows/cypress.yaml
+++ b/.github/workflows/cypress.yaml
@@ -27,11 +27,11 @@ jobs:
       - uses: cypress-io/github-action@v4
         with:
           component: true
-      - uses: int128/upload-artifact-wiki-action@v0
+      - uses: int128/upload-artifact-wiki-action@v1
         id: upload-artifact-wiki
         with:
           path: cypress/screenshots/**/*.png
       - uses: int128/comment-action@v1
         with:
           post: |
-            <img width="512" src="${{ steps.upload-artifact-wiki.outputs.url }}/cypress/screenshots/App.cy.tsx/App%20--%20mounts.png">
+            <img src="${{ steps.upload-artifact-wiki.outputs.url }}/cypress/screenshots/App.cy.tsx/App%20--%20mounts.png">
