--- a/.github/workflows/react.yaml
+++ b/.github/workflows/react.yaml
@@ -15,8 +15,22 @@ on:
       - src/**
       - package.json
       - yarn.lock
+    tags:
+      - v*
 
 jobs:
+  build:
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
+          cache: yarn
+      - run: yarn
+      - run: yarn build
+
   test:
     runs-on: ubuntu-latest
     timeout-minutes: 10
