--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "@tsconfig/create-react-app/tsconfig.json",
-  "include": [
-    "src"
-  ]
+  "compilerOptions": {
+    "target": "es2015"
+  },
+  "include": ["src"]
 }
