--- a/.github/workflows/react.yaml
+++ b/.github/workflows/react.yaml
@@ -5,7 +5,7 @@ on:
     paths:
       - .github/workflows/react.yaml
       - src/**
-      - package.json
+      - '*.json'
       - yarn.lock
   push:
     branches:
@@ -13,7 +13,7 @@ on:
     paths:
       - .github/workflows/react.yaml
       - src/**
-      - package.json
+      - '*.json'
       - yarn.lock
     tags:
       - v*
