--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -6,12 +6,14 @@ on:
       - main
     paths:
       - .github/workflows/release.yaml
+      - manifest.json
       - package.json
   push:
     branches:
       - main
     paths:
       - .github/workflows/release.yaml
+      - manifest.json
       - package.json
     tags:
       - '*'
@@ -27,8 +29,6 @@ jobs:
           node-version: 16
           cache: yarn
       - run: yarn
-      - run: sed -i -e 's|0\.0\.0|${{ github.ref_name }}|' public/manifest.json
-      - run: git diff
       - run: yarn build
       - run: yarn package
       - run: zipinfo build.zip
