--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "BNTP: Bookmarks in New Tab Page",
-  "version": "0.0.0",
+  "version": "LATEST",
   "description": "Lightweight New Tab Page with Bookmarks and Top Sites",
   "permissions": [
     "bookmarks",
