--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -32,5 +32,10 @@ jobs:
       - run: yarn build
       - run: yarn package
       - run: zipinfo build.zip
+      - if: github.event_name == 'pull_request'
+        uses: actions/upload-artifact@v3
+        with:
+          name: build.zip
+          path: build.zip
       - if: github.ref_type == 'tag'
         run: gh release upload "${{ github.ref_name }}" build.zip
