--- a/.github/workflows/cypress.yaml
+++ b/.github/workflows/cypress.yaml
@@ -29,6 +29,7 @@ jobs:
       - uses: cypress-io/github-action@v4
         with:
           component: true
+          browser: chrome
       - uses: int128/upload-artifact-wiki-action@v1
         id: upload-artifact-wiki
         with:
