--- a/.github/workflows/cypress.yaml
+++ b/.github/workflows/cypress.yaml
@@ -29,6 +29,7 @@ jobs:
       - uses: cypress-io/github-action@v4
         with:
           component: true
+          browser: chrome
       - uses: int128/upload-artifact-wiki-action@v1
         id: upload-artifact-wiki
         with:
@@ -36,4 +37,4 @@ jobs:
       - uses: int128/comment-action@v1
         with:
           post: |
-            <img src="${{ steps.upload-artifact-wiki.outputs.url }}/cypress/screenshots/App.cy.tsx/App%20--%20mounts.png">
+            <img width="800" src="${{ steps.upload-artifact-wiki.outputs.url }}/cypress/screenshots/App.cy.tsx/App%20--%20mounts.png">
