--- a/.github/workflows/cypress.yaml
+++ b/.github/workflows/cypress.yaml
@@ -38,3 +38,4 @@ jobs:
         with:
           post: |
             <img width="800" src="${{ steps.upload-artifact-wiki.outputs.url }}/cypress/screenshots/App.cy.tsx/App%20--%20mounts.png">
+            <img width="800" src="${{ steps.upload-artifact-wiki.outputs.url }}/cypress/screenshots/App.cy.tsx/BookmarkEditor%20--%20mounts.png">
