--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -1,7 +1,10 @@
 {
   "extends": "@tsconfig/cypress/tsconfig.json",
-  "include": [
-    "**/*.ts",
-    "**/*.tsx"
-  ]
+  "compilerOptions": {
+    "lib": ["esnext", "dom"],
+    "moduleResolution": "node",
+    "target": "es2015",
+    "jsx": "react-jsx"
+  },
+  "include": ["**/*.ts", "**/*.tsx"]
 }
