--- a/.github/workflows/cypress.yaml
+++ b/.github/workflows/cypress.yaml
@@ -26,6 +26,10 @@ jobs:
     timeout-minutes: 10
     steps:
       - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version-file: .node-version
+          cache: yarn
       - uses: cypress-io/github-action@v4
         with:
           component: true
