--- a/.github/workflows/react.yaml
+++ b/.github/workflows/react.yaml
@@ -24,7 +24,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version-file: .node-version
           cache: yarn
       - run: yarn
       - run: yarn build
@@ -36,7 +36,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version-file: .node-version
           cache: yarn
       - run: yarn
       - run: yarn test
@@ -51,7 +51,7 @@ jobs:
           ref: ${{ github.head_ref }}
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version-file: .node-version
           cache: yarn
       - run: yarn
       - run: yarn format
