--- a/package.json
+++ b/package.json
@@ -2,6 +2,16 @@
   "name": "bntp",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "start": "node scripts/start.js",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "format": "prettier --write src scripts",
+    "format-check": "prettier --check src scripts",
+    "lint": "eslint src",
+    "package": "node scripts/package.js",
+    "eject": "react-scripts eject"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "14.0.0",
@@ -16,28 +26,6 @@
     "typescript": "5.0.4",
     "web-vitals": "3.3.1"
   },
-  "scripts": {
-    "start": "node scripts/start.js",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "format": "prettier --write src scripts",
-    "format-check": "prettier --check src scripts",
-    "lint": "eslint src",
-    "package": "node scripts/package.js",
-    "eject": "react-scripts eject"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
   "devDependencies": {
     "@tsconfig/create-react-app": "1.0.3",
     "@tsconfig/cypress": "1.0.1",
@@ -46,5 +34,8 @@
     "cypress": "12.11.0",
     "jest-chrome": "0.8.0",
     "prettier": "2.8.8"
-  }
+  },
+  "browserslist": [
+    "last 2 chrome version"
+  ]
 }
