--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -8,6 +8,7 @@ on:
       - .github/workflows/release.yaml
       - manifest.json
       - package.json
+      - pnpm-lock.yaml
   push:
     branches:
       - main
@@ -15,6 +16,7 @@ on:
       - .github/workflows/release.yaml
       - manifest.json
       - package.json
+      - pnpm-lock.yaml
     tags:
       - '*'
 
@@ -27,10 +29,9 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version-file: .node-version
-          cache: yarn
-      - run: yarn
-      - run: yarn build
-      - run: yarn package
+      - run: pnpm i
+      - run: pnpm run build
+      - run: pnpm run package
       - run: zipinfo build.zip
       - if: github.event_name == 'pull_request'
         uses: actions/upload-artifact@v4
