--- a/.github/workflows/react.yaml
+++ b/.github/workflows/react.yaml
@@ -25,6 +25,7 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version-file: .node-version
+      - run: corepack enable pnpm
       - run: pnpm i
       - run: pnpm run build
 
@@ -36,6 +37,7 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version-file: .node-version
+      - run: corepack enable pnpm
       - run: pnpm i
       - run: pnpm run test
       - run: pnpm run lint
@@ -50,6 +52,7 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version-file: .node-version
+      - run: corepack enable pnpm
       - run: pnpm i
       - run: pnpm run format
       - uses: int128/update-generated-files-action@v2
