--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/chrome": "0.0.261",
     "adm-zip": "0.5.10",
     "cypress": "13.5.1",
+    "fs-extra": "^11.2.0",
     "jest-chrome": "0.8.0",
     "prettier": "3.2.5"
   },
