--- a/.github/workflows/cypress.yaml
+++ b/.github/workflows/cypress.yaml
@@ -8,7 +8,7 @@ on:
       - cypress/**
       - cypress.*
       - '*.json'
-      - yarn.lock
+      - pnpm-lock.yaml
   push:
     branches:
       - main
@@ -18,7 +18,7 @@ on:
       - cypress/**
       - cypress.*
       - '*.json'
-      - yarn.lock
+      - pnpm-lock.yaml
 
 jobs:
   test:
@@ -29,7 +29,7 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version-file: .node-version
-          cache: yarn
+      - run: corepack enable pnpm
       - uses: cypress-io/github-action@v4
         with:
           component: true
