--- a/.github/workflows/cypress.yaml
+++ b/.github/workflows/cypress.yaml
@@ -30,10 +30,8 @@ jobs:
         with:
           node-version-file: .node-version
       - run: corepack enable pnpm
-      - uses: cypress-io/github-action@v4
-        with:
-          component: true
-          browser: chrome
+      - run: pnpm i
+      - run: pnpm cypress:test
       - uses: int128/upload-artifact-wiki-action@v1
         id: upload-artifact-wiki
         with:
