--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "start": "node scripts/start.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "cypress:test": "cypress run --component --browser chrome",
     "format": "prettier --write src scripts",
     "format-check": "prettier --check src scripts",
     "lint": "eslint src",
     "package": "node scripts/package.js",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@testing-library/jest-dom": "6.4.2",
@@ -28,15 +29,24 @@
     "web-vitals": "3.5.2"
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "^7.6.17",
+    "@storybook/addon-interactions": "^7.6.17",
+    "@storybook/addon-links": "^7.6.17",
+    "@storybook/addon-onboarding": "^1.0.11",
+    "@storybook/blocks": "^7.6.17",
+    "@storybook/preset-create-react-app": "^7.6.17",
+    "@storybook/react": "^7.6.17",
+    "@storybook/react-webpack5": "^7.6.17",
+    "@storybook/test": "^7.6.17",
     "@tsconfig/create-react-app": "^2.0.2",
-    "@tsconfig/cypress": "1.0.1",
     "@types/chrome": "0.0.263",
     "adm-zip": "0.5.10",
-    "cypress": "13.6.6",
+    "eslint-plugin-storybook": "^0.8.0",
     "fs-extra": "^11.2.0",
     "jest-chrome": "0.8.0",
     "prettier": "3.2.5",
     "react-dev-utils": "^12.0.1",
+    "storybook": "^7.6.17",
     "webpack": "^5.90.3"
   },
   "browserslist": [
