--- a/package.json
+++ b/package.json
@@ -2,53 +2,33 @@
   "name": "bntp",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "start": "node scripts/start.js",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "format": "prettier --write src scripts",
-    "format-check": "prettier --check src scripts",
-    "lint": "eslint src",
-    "package": "node scripts/package.js",
-    "eject": "react-scripts eject",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "dev": "vite build --watch",
+    "build": "tsc && vite build",
+    "lint": "eslint . --ext ts,tsx",
+    "test": "jest"
   },
   "dependencies": {
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
+  },
+  "devDependencies": {
     "@testing-library/jest-dom": "6.4.2",
     "@testing-library/react": "14.2.2",
-    "@testing-library/user-event": "14.5.2",
+    "@tsconfig/vite-react": "^3.0.1",
+    "@types/chrome": "0.0.263",
     "@types/jest": "29.5.12",
     "@types/node": "20.11.30",
     "@types/react": "18.2.67",
     "@types/react-dom": "18.2.22",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-scripts": "5.0.1",
-    "typescript": "5.4.2"
-  },
-  "devDependencies": {
-    "@storybook/addon-essentials": "^7.6.17",
-    "@storybook/addon-interactions": "^7.6.17",
-    "@storybook/addon-links": "^7.6.17",
-    "@storybook/addon-onboarding": "^1.0.11",
-    "@storybook/blocks": "^7.6.17",
-    "@storybook/preset-create-react-app": "^7.6.17",
-    "@storybook/react": "^7.6.17",
-    "@storybook/react-webpack5": "^7.6.17",
-    "@storybook/test": "^7.6.17",
-    "@tsconfig/create-react-app": "^2.0.2",
-    "@types/chrome": "0.0.263",
-    "adm-zip": "0.5.12",
-    "eslint-plugin-storybook": "^0.8.0",
-    "fs-extra": "^11.2.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "jest": "^29.7.0",
     "jest-chrome": "0.8.0",
+    "jest-environment-jsdom": "^29.7.0",
     "prettier": "3.2.5",
-    "react-dev-utils": "^12.0.1",
-    "storybook": "^7.6.17",
-    "webpack": "^5.90.3"
-  },
-  "browserslist": [
-    "last 2 chrome version"
-  ]
+    "ts-jest": "^29.1.2",
+    "typescript": "5.4.2",
+    "vite": "^5.1.6"
+  }
 }
