--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-scripts": "5.0.1",
-    "typescript": "5.4.2",
-    "web-vitals": "3.5.2"
+    "typescript": "5.4.2"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.6.17",
