--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "@tsconfig/vite-react/tsconfig.json",
   "compilerOptions": {
+    "types": ["vitest/globals", "chrome"],
     "esModuleInterop": true
   },
   "include": ["src"]
