--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite build --watch",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx",
-    "test": "jest"
+    "test": "vitest"
   },
   "dependencies": {
     "react": "18.2.0",
@@ -18,17 +18,15 @@
     "@testing-library/react": "14.2.2",
     "@tsconfig/vite-react": "^3.0.1",
     "@types/chrome": "0.0.263",
-    "@types/jest": "29.5.12",
     "@types/node": "20.11.30",
     "@types/react": "18.2.67",
     "@types/react-dom": "18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
-    "jest": "^29.7.0",
     "jest-chrome": "0.8.0",
-    "jest-environment-jsdom": "^29.7.0",
+    "jsdom": "^24.0.0",
     "prettier": "3.2.5",
-    "ts-jest": "^29.1.2",
     "typescript": "5.4.2",
-    "vite": "^5.1.6"
+    "vite": "^5.1.6",
+    "vitest": "^1.4.0"
   }
 }
