--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,23 +1,23 @@
 {
   "extends": [
-    "react-app",
-    "react-app/jest",
     "eslint:recommended",
+    "plugin:react/recommended",
+    "plugin:react/jsx-runtime",
     "plugin:@typescript-eslint/recommended",
-    "plugin:@typescript-eslint/recommended-requiring-type-checking",
-    "plugin:storybook/recommended"
+    "plugin:@typescript-eslint/recommended-requiring-type-checking"
   ],
-  "plugins": [
-    "@typescript-eslint"
-  ],
+  "plugins": ["@typescript-eslint"],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "project": true
   },
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
+  },
   "rules": {
-    "sort-imports": [
-      "error"
-    ]
+    "sort-imports": ["error"]
   },
   "root": true
 }
