--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite build --watch",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx",
+    "format": "prettier --write src",
     "test": "vitest"
   },
   "dependencies": {
@@ -21,7 +22,11 @@
     "@types/node": "20.11.30",
     "@types/react": "18.2.67",
     "@types/react-dom": "18.2.22",
+    "@typescript-eslint/eslint-plugin": "^7.3.1",
+    "@typescript-eslint/parser": "^7.3.1",
     "@vitejs/plugin-react": "^4.2.1",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.34.1",
     "jest-chrome": "0.8.0",
     "jsdom": "^24.0.0",
     "prettier": "3.2.5",
