--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -33,13 +33,13 @@ jobs:
       - run: pnpm i
       - run: pnpm run build
       - run: pnpm run package
-      - run: zipinfo build.zip
+      - run: zipinfo dist.zip
       - if: github.event_name == 'pull_request'
         uses: actions/upload-artifact@v4
         with:
-          name: build.zip
-          path: build.zip
+          name: dist.zip
+          path: dist.zip
       - if: github.ref_type == 'tag'
-        run: gh release upload "${{ github.ref_name }}" build.zip
+        run: gh release upload "${{ github.ref_name }}" dist.zip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
