--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -32,7 +32,7 @@ jobs:
       - run: corepack enable pnpm
       - run: pnpm i
       - run: pnpm run build
-      - run: sed -i -e "s/0.0.0.0/$GITHUB_REF_NAME/" dist/manifest.json
+      - run: sed -i -e "s|0.0.0.0|$GITHUB_REF_NAME|" dist/manifest.json
       - run: cd dist && zip -r ../dist.zip .
       - run: zipinfo dist.zip
       - if: github.event_name == 'pull_request'
