--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -32,14 +32,15 @@ jobs:
       - run: corepack enable pnpm
       - run: pnpm i
       - run: pnpm run build
-      - run: pnpm run package
-      - run: zipinfo build.zip
+      - run: sed -i -e "s|0.0.0.0|$GITHUB_REF_NAME|" dist/manifest.json
+      - run: cd dist && zip -r ../dist.zip .
+      - run: zipinfo dist.zip
       - if: github.event_name == 'pull_request'
         uses: actions/upload-artifact@v4
         with:
-          name: build.zip
-          path: build.zip
+          name: dist.zip
+          path: dist.zip
       - if: github.ref_type == 'tag'
-        run: gh release upload "${{ github.ref_name }}" build.zip
+        run: gh release upload "${{ github.ref_name }}" dist.zip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
