--- a/package.json
+++ b/package.json
@@ -2,53 +2,36 @@
   "name": "bntp",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "start": "node scripts/start.js",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "format": "prettier --write src scripts",
-    "format-check": "prettier --check src scripts",
-    "lint": "eslint src",
-    "package": "node scripts/package.js",
-    "eject": "react-scripts eject",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "dev": "vite build --watch",
+    "build": "tsc && vite build",
+    "lint": "eslint . --ext ts,tsx",
+    "format": "prettier --write src",
+    "test": "vitest"
   },
   "dependencies": {
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
+  },
+  "devDependencies": {
     "@testing-library/jest-dom": "6.4.2",
     "@testing-library/react": "14.2.2",
-    "@testing-library/user-event": "14.5.2",
-    "@types/jest": "29.5.12",
+    "@tsconfig/vite-react": "^3.0.1",
+    "@types/chrome": "0.0.263",
     "@types/node": "20.12.2",
     "@types/react": "18.2.73",
     "@types/react-dom": "18.2.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-scripts": "5.0.1",
-    "typescript": "5.4.3"
-  },
-  "devDependencies": {
-    "@storybook/addon-essentials": "^7.6.17",
-    "@storybook/addon-interactions": "^7.6.17",
-    "@storybook/addon-links": "^7.6.17",
-    "@storybook/addon-onboarding": "^1.0.11",
-    "@storybook/blocks": "^7.6.17",
-    "@storybook/preset-create-react-app": "^7.6.17",
-    "@storybook/react": "^7.6.17",
-    "@storybook/react-webpack5": "^7.6.17",
-    "@storybook/test": "^7.6.17",
-    "@tsconfig/create-react-app": "^2.0.2",
-    "@types/chrome": "0.0.263",
-    "adm-zip": "0.5.12",
-    "eslint-plugin-storybook": "^0.8.0",
-    "fs-extra": "^11.2.0",
+    "@typescript-eslint/eslint-plugin": "^7.3.1",
+    "@typescript-eslint/parser": "^7.3.1",
+    "@vitejs/plugin-react": "^4.2.1",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.34.1",
     "jest-chrome": "0.8.0",
+    "jsdom": "^24.0.0",
     "prettier": "3.2.5",
-    "react-dev-utils": "^12.0.1",
-    "storybook": "^7.6.17",
-    "webpack": "^5.90.3"
-  },
-  "browserslist": [
-    "last 2 chrome version"
-  ]
+    "typescript": "5.4.2",
+    "vite": "^5.1.6",
+    "vitest": "^1.4.0"
+  }
 }
