--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite build --watch",
     "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx",
+    "lint": "eslint .",
     "format": "prettier --write src",
     "test": "vitest"
   },
@@ -22,14 +22,13 @@
     "@types/node": "20.12.5",
     "@types/react": "18.2.74",
     "@types/react-dom": "18.2.24",
-    "@typescript-eslint/eslint-plugin": "^7.3.1",
-    "@typescript-eslint/parser": "^7.3.1",
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
     "jsdom": "^24.0.0",
     "prettier": "3.2.5",
     "typescript": "5.4.4",
+    "typescript-eslint": "^7.5.0",
     "vite": "^5.1.6",
     "vitest": "^1.4.0"
   }
