--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
     "build": "tsc && vite build",
     "lint": "eslint .",
     "format": "prettier --write src",
-    "test": "vitest"
+    "test": "vitest",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
   "devDependencies": {
+    "@storybook/react": "^8.0.8",
+    "@storybook/react-vite": "^8.0.8",
     "@testing-library/jest-dom": "6.4.2",
     "@testing-library/react": "15.0.5",
     "@tsconfig/vite-react": "^3.0.1",
@@ -27,6 +31,7 @@
     "eslint-plugin-react": "^7.34.1",
     "jsdom": "^24.0.0",
     "prettier": "3.2.5",
+    "storybook": "^8.0.8",
     "typescript": "5.4.5",
     "typescript-eslint": "^7.5.0",
     "vite": "^5.1.6",
