--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "format": "prettier --write src",
     "test": "vitest",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "storycap": "storycap http://localhost:9009 --serverCmd 'storybook dev -p 9009'"
   },
   "dependencies": {
     "react": "18.3.1",
@@ -32,6 +33,7 @@
     "jsdom": "^24.0.0",
     "prettier": "3.2.5",
     "storybook": "^8.0.8",
+    "storycap": "^5.0.0",
     "typescript": "5.4.5",
     "typescript-eslint": "^7.5.0",
     "vite": "^5.1.6",
