Lock pnpm version

--- a/package.json
+++ b/package.json
@@ -38,5 +38,6 @@
     "typescript-eslint": "^7.5.0",
     "vite": "^5.1.6",
     "vitest": "^1.4.0"
-  }
+  },
+  "packageManager": "pnpm@9.3.0+sha256.e1f9e8d1a16607a46dd3c158b5f7a7dc7945501d1c6222d454d63d033d1d918f"
 }
