--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint": "^9.0.0",
     "eslint-plugin-react": "^7.34.1",
     "jsdom": "^25.0.0",
+    "pnpm": "10.1.0",
     "prettier": "3.3.3",
     "storybook": "^8.0.8",
     "storycap": "^5.0.0",
@@ -39,5 +40,5 @@
     "vite": "^5.1.6",
     "vitest": "^2.0.0"
   },
-  "packageManager": "pnpm@9.13.2"
+  "packageManager": "pnpm@10.1.0"
 }
