--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "19.1.1"
   },
   "devDependencies": {
+    "@biomejs/biome": "2.2.6",
     "@eslint/js": "9.35.0",
     "@storybook/react": "^9.0.0",
     "@storybook/react-vite": "^9.0.0",
