--- a/.github/workflows/storybook.yaml
+++ b/.github/workflows/storybook.yaml
@@ -53,5 +53,5 @@ jobs:
             </table>
       - run: pnpm reg-suit run
         env:
-          REG_EXPECTED_KEY: ${{ github.event.pull_request.head.sha || github.sha }} # ${{ github.event.pull_request.base.sha || github.sha }}
+          REG_EXPECTED_KEY: ${{ github.event.pull_request.base.sha || github.sha }}
           REG_ACTUAL_KEY: ${{ github.event.pull_request.head.sha || github.sha }}
