--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "vitest",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "storycap": "storycap http://localhost:9009 --serverCmd 'storybook dev -p 9009'"
+    "test-storybook": "vitest --project=storybook"
   },
   "dependencies": {
     "react": "19.2.0",
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.2",
+    "@storybook/addon-vitest": "9.1.16",
     "@storybook/react": "9.1.16",
     "@storybook/react-vite": "9.1.16",
     "@testing-library/jest-dom": "6.9.1",
@@ -28,12 +29,14 @@
     "@types/react-dom": "19.2.2",
     "@vitejs/plugin-react": "5.1.0",
     "jsdom": "26.1.0",
-    "pnpm": "10.20.0",
+    "pnpm": "10.19.0",
     "storybook": "9.1.16",
-    "storycap": "5.0.1",
     "typescript": "5.9.3",
     "vite": "7.1.12",
-    "vitest": "3.2.4"
+    "vitest": "3.2.4",
+    "playwright": "^1.56.1",
+    "@vitest/browser": "3.2.4",
+    "@vitest/coverage-v8": "3.2.4"
   },
   "packageManager": "pnpm@10.20.0"
 }
