--- a/.github/workflows/storybook.yaml
+++ b/.github/workflows/storybook.yaml
@@ -48,7 +48,7 @@ jobs:
                 <td><img src="${{ steps.upload-artifact-wiki.outputs.url }}/__screenshots__/src/App/component.stories.tsx/Dark-1.png"></td>
               </tr>
               <tr>
-                <td><img src="${{ steps.upload-artifact-wiki.outputs.url }}/__screenshots__/src/BookmarkEditor.stories.tsx/component/Primary-1.png"></td>
-                <td><img src="${{ steps.upload-artifact-wiki.outputs.url }}/__screenshots__/src/Preferences.stories.tsx/component/Primary-1.png"></td>
+                <td><img src="${{ steps.upload-artifact-wiki.outputs.url }}/__screenshots__/src/BookmarkEditor/component.stories.tsx/Primary-1.png"></td>
+                <td><img src="${{ steps.upload-artifact-wiki.outputs.url }}/__screenshots__/src/Preferences/component.stories.tsx/Primary-1.png"></td>
               </tr>
             </table>
